<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_home_height">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextColor="@color/white"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="center"
            app:expandedTitleTextAppearance="@style/ExpandedAppBarTitle"
            app:expandedTitleTextColor="@color/colorPrimaryDark"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/app_name">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/expandedImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_header_home"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btnViewType"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:src="@drawable/ic_view_grid" />

                </com.google.android.material.card.MaterialCardView>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleY="2"
        app:indicatorColor="@color/colorAccent"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="bottom"
        android:layout_gravity="bottom"
        android:indeterminate="true" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="bottom"
        android:paddingBottom="16dp"
        android:paddingHorizontal="@dimen/padding_horizontal"
        android:gravity="center"
        android:textColor="@color/colorTextPrimary"
        android:paddingTop="100dp"
        android:textSize="16sp"
        android:layout_gravity="bottom|center_horizontal"
        tools:text="@string/please_wait"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/tvMessage"
        app:layout_anchorGravity="bottom|center_horizontal"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/try_again" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPhoto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:visibility="gone"
        android:paddingHorizontal="8dp"
        android:paddingTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:spanCount="2"
        tools:itemCount="4"
        tools:listitem="@layout/item_photo" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>