<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:collapsedTitleTextColor="@color/white"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="center"
            app:expandedTitleTextAppearance="@style/ExpandedAppBarTitle"
            app:expandedTitleTextColor="@color/colorPrimaryDark"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/expandedImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/img_header_home"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="bottom">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardPhotographer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginBottom="@dimen/_8dp"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:contentPadding="@dimen/_16dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvCaptionPhotographer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/photographer"
                    android:textAllCaps="true"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="12sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvPhotographerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/tvCaptionPhotographer"
                    tools:text="Gilar Purwita Subagja" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnVisitProfile"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:letterSpacing="0.03"
                    android:text="@string/visit_profile"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    app:icon="@drawable/ic_link"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvPhotographerName" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardPhotoInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cardPhotographer"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginBottom="@dimen/_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:contentPadding="@dimen/_16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvCaptionResolution"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resolution"
                    android:textAllCaps="true"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="12sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvPhotoResolution"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/tvCaptionResolution"
                    tools:text="1000px x 2000px" />

                <TextView
                    android:id="@+id/tvCaptionDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textAllCaps="true"
                    android:layout_marginTop="@dimen/_16dp"
                    android:textColor="@color/colorTextSecondary"
                    app:layout_constraintTop_toBottomOf="@+id/tvPhotoResolution"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvPhotoDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/tvCaptionDescription"
                    tools:text="Silhouette of House Under Blue Sky during Sunset" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>